--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,7 +12,20 @@ h1 {
 
 p {
   font-family: Verdana;
-  color: Aquamarine;
   font-size: 16px;
   text-align: center;
+  color: gray;
+}
+
+h2 {
+  font-family: Verdana;
+  font-size: 42px;
+  text-align: center;
+  font-weight: 300;
+  color: white;
+}
+
+.gray {
+  font-family: Verdana;
+  font-size: 21px;
 }
